# wow-tools

./: README.md  pyproject.toml
.github/actions/get-version/: action.yaml
src/: app.py
